# requestx-api

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Config_test.toml  Dockerfile  Rocket.toml.template  cloudbuild.yaml  docker-compose.yml  log4rs.yml  roles.json
src/: main.rs  schema.rs
src/adapter/: mod.rs
src/adapter/controller/: auth_controller.rs  health.rs  level_request_controller.rs  level_review_controller.rs  mod.rs  reviewer_controller.rs  user_controller.rs
src/adapter/controller/internal/: internal_level_request_controller.rs  internal_level_review_controller.rs  internal_moderator_controller.rs  internal_request_manager_controller.rs  mod.rs
src/adapter/geometry_dash/: geometry_dash_client.rs  geometry_dash_dashrs_client.rs  mod.rs
src/adapter/mysql/: level_request_repository.rs  mod.rs  moderator_repository.rs  my_sql_moderator_repository.rs  mysql_level_request_repository.rs  mysql_review_repository.rs  mysql_reviewer_repository.rs  mysql_user_repository.rs  review_repository.rs  reviewer_repository.rs  user_repository.rs
src/adapter/mysql/model/: level_request.rs  mod.rs  moderator.rs  prelude.rs  review.rs  reviewer.rs  sea_orm_active_enums.rs  user.rs
src/domain/model/: gd_level.rs  level_creator.rs  mod.rs  moderator.rs  request_rating.rs  review.rs  reviewer.rs  user.rs
src/domain/model/api/: auth_api.rs  common.rs  level_request_api.rs  level_request_api_request.rs  level_request_api_response.rs  level_review_api.rs  mod.rs  request_rating.rs  reviewer_api.rs  user_api.rs
src/domain/model/auth/: claims.rs
src/domain/model/discord/: message.rs  user.rs
src/domain/model/error/: geometry_dash_dashrs_error.rs  level_request_error.rs  level_review_error.rs  mod.rs  moderator_error.rs  reviewer_error.rs
src/domain/model/error/discord/: discord_error.rs  mod.rs
src/domain/model/error/geometry_dash/: mod.rs
src/domain/model/internal/api/: internal_level_request_api.rs  internal_level_review_api.rs  internal_level_review_api_request.rs  internal_request_manager_api.rs  mod.rs  moderator_api.rs
src/domain/service/: auth_service.rs  discord_user_service.rs  level_request_service.rs  level_review_service.rs  level_reviewer_service.rs  mod.rs  moderate_service.rs  moderator_service.rs  request_service.rs  review_service.rs  reviewer_service.rs  user_service.rs
src/domain/service/internal/: mod.rs  request_manager_service.rs
src/model/: create_user.rs  mod.rs  user.rs  user_auth.rs
src/rocket/common/: constants.rs  mod.rs
src/rocket/common/config/: auth_config.rs  client_config.rs  common_config.rs  geometry_dash_config.rs  mod.rs  mysql_database_config.rs
src/rocket/common/config/mysql/: mod.rs  mysql_database_config.rs
src/rocket/common/internal/: internal.rs
src/routes/: users.rs
src/tests/: user.rs
src/utilities/: mod.rs  users.rs
