[package]
name = "requestx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "serde_json"] }
diesel = { version = "2.0.0", features = ["mysql"] }
chrono = "0.4.22"
dotenv = "0.15"
argonautica = "0.2.0"
nanoid = "0.4.0"
regex = "1.4.5"
sqlx = { version = "0.6.1", features= ["chrono", "runtime-async-std-rustls", "mysql"]}
sqlx-core = "0.6.1"
jwt = "0.16.0"
sha2 = "0.10.5"
hmac = "0.12.1"


[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]

[dev-dependencies]
tokio-test = "*"