[package]
name = "requestx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["secrets", "json", "serde_json"] }
diesel = { version = "2.1.3", features = ["mysql"] }
chrono = "0.4.22"
dotenv = "0.15"
argonautica = "0.2.0"
nanoid = "0.4.0"
regex = "1.4.5"
sqlx = { version = "0.7.2", features= ["chrono", "runtime-async-std-rustls", "mysql"]}
sqlx-core = "0.7.2"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
dash-rs = {git = "https://github.com/zRyder/dash-rs.git"}
reqwest = { version = "0.11.22", features = ["json"] }
async-trait = "0.1.74"
sea-orm = { version = "0.12.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", "mock" ] }
config = "0.13.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.4"
features = ["sqlx_mysql"]

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.11.4"