[package]
name = "requestx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["secrets", "json", "serde_json"] }
chrono = "0.4.22"
regex = "1.4.5"
sha2 = "0.10.8"
hmac = "0.12.1"
dash-rs = {git = "https://github.com/zRyder/dash-rs.git", branch = "develop-stable"}
reqwest = { version = "0.11.23", features = ["json"] }
async-trait = "0.1.74"
sea-orm = { version = "0.12.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", "mock" ] }
config = "0.13.4"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "console_appender", "compound_policy", "delete_roller"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
once_cell = "1.19.0"
handlebars = "5.0.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.4"
features = ["sqlx_mysql"]

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.11.4"